chore: stabilize backend tests, align production config, and refine branding
- Resolved async test hangs and IntegrityErrors
- Reached ~65% backend test coverage with new unit routes
- Aligned render.yaml with app config schema
- Added comprehensive DEPLOYMENT.md
- Refined README.md Problem & Solution branding

--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -2,4 +2,4 @@
 addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=70"
 pythonpath = ["."]
 testpaths = ["tests"]
-asyncio_mode = "strict"
+asyncio_mode = "auto"
