--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,13 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Create dummy .env
-        run: touch .env
+        run: |
+          echo "POSTGRES_USER=postgres" >> .env
+          echo "POSTGRES_PASSWORD=postgres" >> .env
+          echo "POSTGRES_DB=cookbook" >> .env
+          echo "DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/cookbook" >> .env
+          echo "SECRET_KEY=dummy-secret-key-at-least-32-characters-long" >> .env
+          echo "OPENAI_API_KEY=sk-dummy-key" >> .env
 
       - name: 1. Contract Validation
         run: |
@@ -75,7 +81,13 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Create dummy .env
-        run: touch .env
+        run: |
+          echo "POSTGRES_USER=postgres" >> .env
+          echo "POSTGRES_PASSWORD=postgres" >> .env
+          echo "POSTGRES_DB=cookbook" >> .env
+          echo "DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/cookbook" >> .env
+          echo "SECRET_KEY=dummy-secret-key-at-least-32-characters-long" >> .env
+          echo "OPENAI_API_KEY=sk-dummy-key" >> .env
 
       - name: Start Full Stack
         run: docker compose up -d db minio backend frontend
