--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,8 +31,9 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.3.1",
+    "@vitejs/plugin-react": "4.2.1",
+    "@vitest/coverage-v8": "1.3.1",
+    "vite": "5.4.11",
     "@testing-library/react": "^14.2.1",
     "@testing-library/jest-dom": "^6.4.2",
     "uuid": "^9.0.1",
@@ -44,6 +45,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.1"
+    "vitest": "1.3.1"
   }
 }
