--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -65,4 +65,4 @@ ENV PORT 3000
 # set hostname to localhost
 ENV HOSTNAME "0.0.0.0"
 
-CMD ["node", "apps/web/server.js"]
+CMD ["node", "server.js"]
