fix(render): force asyncpg driver, robust CORS parsing, and Next.js standalone root entry

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -65,4 +65,5 @@ ENV PORT 3000
 # set hostname to localhost
 ENV HOSTNAME "0.0.0.0"
 
-CMD ["node", "apps/web/server.js"]
+# The root server.js is the entry point in standalone mode for monorepos
+CMD ["node", "server.js"]
