--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -38,6 +38,9 @@ COPY packages/api-client ./packages/api-client
 # Uncomment the following line in case you want to disable telemetry during the build.
 ENV NEXT_TELEMETRY_DISABLED 1
 
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+
 # Build
 RUN cd apps/web && pnpm build
 
