fix(render): update deployment URLs to match actual Render subdomains and add CORS debug log

--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
     healthCheckPath: /
     envVars:
       - key: NEXT_PUBLIC_API_URL
-        value: https://cookbook-backend.onrender.com
+        value: https://cookbook-backend-d1hy.onrender.com
 
   # --------------------------------------------------------------------------------
   # BACKEND (Python/FastAPI)
@@ -40,7 +40,7 @@ services:
       - key: UPLOAD_DIR
         value: "/app/uploads"
       - key: CORS_ORIGINS
-        value: https://cookbook-frontend.onrender.com
+        value: https://cookbook-frontend-k5lz.onrender.com
       # API Key and Secret Key must be set manually in Render Dashboard for security
       - key: OPENAI_API_KEY
         sync: false
