--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -32,4 +32,5 @@ RUN adduser --disabled-password --gecos '' appuser && \
     chown -R appuser:appuser /app
 USER appuser
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use shell form for CMD to allow environment variable expansion ($PORT)
+CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
