--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -64,7 +64,7 @@ USER nextjs
 
 EXPOSE 3000
 
-ENV PORT 3000
+# ENV PORT 3000 (Render will set this)
 # set hostname to localhost
 ENV HOSTNAME "0.0.0.0"
 
